--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular": "1.5.6",
     "angular-ui-router": "0.3.1",
     "angular-underscore-module": "1.0.1",
-    "underscore" : "1.8.3"
+    "underscore" : "1.8.3",
+    "components-font-awesome": "4.6.3"
   },
   "resolutions": {
     "angular": "1.5.6"
